# stdex

./: CMakeLists.txt
.github/workflows/: ci.yml
src/: CMakeLists.txt  stdex.cxx  utility.cxx
tests/: CMakeLists.txt  main.cpp  utility_tests.cpp
